# pegasus

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  Guide_containerized_vm.rst  LICENSE  MANIFEST.in  README.md  README.rst  Singularity  build_linux.sh  pyproject.toml  requirements.txt  scripts_install_pegasus.sh  scripts_install_sccloudpy.sh  setup.cfg  setup.py
bigquery/: README.md  query.js
docker/: Dockerfile
docs/: Makefile  acknowledgment.rst  conf.py  contact.rst  contributors.rst  index.rst  installation.rst  references.rst  release_notes.rst  requirements.txt  stable_release.rst  terra_notebook.rst  tutorials.rst  usage.rst
ext_modules/: cfisher.pxd  cfisher.pyx  diff_expr_utils.pyx  fast_sgt.pyx  fast_utils.pyx
fc/: fc_run.py
new-wdl/: cell-ranger-2-0-2.8.wdl  cell_ranger_count_inputs.json  cellranger_count.py  count.wdl  mkfastq.wdl  mkfastq_inputs.json  orchestra.wdl  orchestra_inputs.json  orchestra_methods.py
notebooks/: Mouse Brain Nuclei Hashing.ipynb  Terra Featured Workspace.ipynb  batch_correction.ipynb  doublet_detection.ipynb  gen_html.sh  pbmc3k_tutorial.ipynb  pegasus_analysis.ipynb  pegasus_tutorial.ipynb  plotting_tutorial.ipynb  pseudo_bulk_and_fgsea.ipynb  regress_out.ipynb  scCloudPy Tutorial.ipynb  scCloud_tutorial.ipynb  visium_analysis.ipynb
pegasus/: __init__.py  __main__.py  _version.py  decorators.py
scCloud/: README.rst  __init__.py  __main__.py  _version.py  setup.py
sccloud/: __init__.py  _version.py
scrtools/: README.rst  setup.py
tests/: __init__.py  (+17 more)
(+414 files in other folders)
