[tool.poetry]
name = "pegasus"
version = "1.4.4"
description = "Pegasus is a Python package for analyzing sc/snRNA-seq data of millions of cells"
authors = ["Yiming Yang", "Joshua Gould", "Bo Li"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
adjustText = "^0.7.3"
anndata = "^0.7.8"
Cython = "^0.29.26"
docopt = "^0.6.2"
hnswlib = "^0.6.0"
psutil = "^5.9.0"
threadpoolctl = "^3.0.0"
joblib = "^1.1.0"
lightgbm = "^3.3.2"
leidenalg = "^0.8.8"
matplotlib = "^3.5.1"
natsort = "^8.0.2"
pybind11 = "^2.9.0"
scikit-learn = "^1.0.2"
scikit-misc = "^0.1.4"
seaborn = "^0.11.2"
statsmodels = "^0.13.1"
wordcloud = "^1.8.1"
XlsxWriter = "^3.0.2"
python-igraph = "^0.9.9"
numba = "^0.55.0"
numpy = "*"
pandas = "^1.3.5"
pegasusio = "^0.4.1"
demuxEM = "^0.1.7"
umap-learn = "^0.5.2"
fitsne = {version = "^1.2.1", optional = true}
forceatlas2-python = {version = "^1.1", optional = true}
torch = {version = "^1.10.1", optional = true}
nmf-torch = {version = "^0.1.1", optional = true}
harmony-pytorch = {version = "^0.1.7", optional = true}
scanorama = {version = "^1.7.1", optional = true}
mkl = {version = "^2022.0.1", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
